--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6345,8 +6345,11 @@ a.text-dark:hover, a.text-dark:focus {
 
 .load:hover {
   text-decoration: underline;
-  text-decoration-color: white; }
+  text-decoration-color: white;}
 
+.row{
+    font-weight: 700;
+}
 
 
 
